fix: whitespace between hero content and hero image again

--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@ footer a.btn:hover::after {
     }
 
     .hero-content {
-        max-width: 40rem;
+        max-width: 35rem;
         margin-bottom: 10rem;
     }
 
@@ -229,7 +229,7 @@ footer a.btn:hover::after {
         width: 64rem;
         position: absolute;
         top: -7rem;
-        right: -30rem;
+        right: -28rem;
     }
 
     .hero-image img {
